[package]
name = "bench"
version = "0.1.0"
authors = ["Rakuraku Jyo <jyo.rakuraku@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.0"
nanomsg = "0.7.2"
zmq = "0.9.2"
serde = { version = "1", features = ["derive"] }
